# ESP-MESS-V3

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults.esp32
.github/workflows/: static.yml
components/: analytics.h
components/lib_sd_log/: CMakeLists.txt  lib_sd_log.c  lib_sd_log.h
components/mod_network/: CMakeLists.txt  mod_http.h  mod_ntp.h  mod_wifi.h
components/mod_network/http2/: http2.c  http2.h
components/mod_network/wifi/: mod_wifi.h
components/mod_network/wifi2/: mod_wifi2.h
components/mod_network/wifi_nan/: mod_wifi_nan.h
components/mod_sd/: CMakeLists.txt  lib_littlefs_log.h  mod_sd.c  mod_sd.h
components/mod_storage/: CMakeLists.txt  mod_littlefs_log.h  mod_nvs.h  mod_record_file.h  mod_sd.h  mod_series_file.h  rtc_helper.h  series_file.h
components/mod_wifi/: CMakeLists.txt  mod_wifi.c
flash_data/: example.txt
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main-services.h  main.c  test_network.c  test_sdCard.c  test_storage.c
web_app/: Script-Services.js  index-script.js  index-style.css  index.html  plots-script.js  plots-style.css  plots.html  script.js  style.css
web_app/lib/: RequestScheduler.js
web_app/page-analytics/: analytic.html  page-style.css
web_app/page-file-explorer/: file-explorer.html  page-script.js
web_app/page-sensors/: page-script.js  page-style.css  sensors.html
web_app/page-sensors-scan/: page-script.js  sensors-scan.html
web_app/plots/: plots-script.js  plots-style.css  plots.html
web_app/scripts/: RequestServices.js  SharedScript.js
(+7 files in other folders)
